--- a/client/client.html
+++ b/client/client.html
@@ -3,6 +3,7 @@
 <head>
   <title>Wellness Tracker</title>
   <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
   <script type="text/babel">
     const content = document.querySelector('#content');
